<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="150dp"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/colorkuning"
    app:cardCornerRadius="10sp"
    app:cardElevation="10sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical"
        android:padding="10sp">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:src="@drawable/close" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dialog"
                android:textColor="#000"
                android:textStyle="bold">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:background="#EF5252"
                    android:text="@string/keluar">

                </Button>

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:background="#BBF1BD"
                    android:text="@string/tidak">

                </Button>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>