<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity_7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fixpix"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtV"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:fontFamily="@font/berkshire_swash"
            android:textSize="50sp"

            android:gravity="center"
            android:text="@string/artikel"
            android:textAlignment="center"
            android:textColor="#000000"
             />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/txt11"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/tdsin"
                    tools:ignore="ContentDescription"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"/>

                <TextView
                    android:id="@+id/txt12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/anton"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/txt12"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>